--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "five_b"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
 edition = "2018"
 
@@ -18,3 +18,5 @@ regex = "1.5.4"
 lazy_static = "1.4.0"
 uuid = "0.8.2"
 crypto-hash = "0.3.4"
+colour = "0.6.0"
+urlencoding = "1.3.3"
