--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "five_b"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
 edition = "2018"
 
@@ -21,3 +21,5 @@ crypto-hash = "0.3.4"
 colour = "0.6.0"
 urlencoding = "1.3.3"
 unicode_names2 = "0.4.0"
+ansi_term = "0.12.1"
+hsl = "0.1.1"
