--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "five_b"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
 edition = "2018"
 
@@ -23,3 +23,4 @@ urlencoding = "1.3.3"
 unicode_names2 = "0.4.0"
 ansi_term = "0.12.1"
 hsl = "0.1.1"
+format_num = "0.1.0"
